--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase": "^11.4.0",
+    "openai": "^4.86.2",
+    "ws": "^8.18.1",
     "zod": "^3.24.2"
   }
 }
