--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,14 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@firebase/app": "^0.11.2",
+    "@firebase/firestore": "^4.7.9",
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
+    "dotenv": "^16.4.7",
     "isbot": "^5.1.17",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
